--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     width: 250px;
     height: 250px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
