--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     width: 250px;
     height: 250px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
 }
 .flex-item {
