--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
     width: 250px;
     height: 250px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: space-between;
 }
-.flex-item {
+.flex-item, .flex-item-align-self {
     background-color: hotpink;
     height: 30px;
     width: 30px;
+}
+.flex-item-align-self {
+    align-self: flex-end;
+    background-color: yellowgreen;
+
 }
