--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     width: 250px;
     height: 250px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 .flex-item, .flex-item-align-self {
