--- a/style.css
+++ b/style.css
@@ -6,13 +6,18 @@
     flex-direction: column;
     justify-content: space-between;
 }
-.flex-item, .flex-item-align-self {
+.flex-item{
     background-color: hotpink;
     height: 30px;
     width: 30px;
 }
-.flex-item-align-self {
+.flex-item:nth-child(1) {
     align-self: flex-end;
+    background-color: yellowgreen;
+
+}
+.flex-item:nth-child(2) {
+    align-self: center;
     background-color: yellowgreen;
 
 }
